--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,49 @@
         <item>Year-5</item>
     </string-array>
 
+
+    <string-array name="Course">
+        <item>Engineering</item>
+        <item>Medical</item>
+        <item>Business</item>
+        <item>Arts</item>
+        <item>Law</item>
+    </string-array>
+
+
+    <string-array name="items_class">
+        <item>Year 1</item>
+        <item>Year 2</item>
+        <item>Year 3</item>
+        <item>Year 4</item>
+    </string-array>
+
+    <string-array name="items_div_class_1">
+        <item>Engineering</item>
+        <item>Bsc</item>
+        <item>Div 1-C</item>
+        <item>Div 1-D</item>
+    </string-array>
+
+    <string-array name="items_div_class_2">
+        <item>Div 2-A</item>
+        <item>Div 2-B</item>
+        <item>Div 2-C</item>
+        <item>Div 2-D</item>
+    </string-array>
+
+    <string-array name="items_div_class_3">
+        <item>Div 3-A</item>
+        <item>Div 3-B</item>
+        <item>Div 3-C</item>
+        <item>Div 3-D</item>
+    </string-array>
+
+    <string-array name="items_div_class_4">
+        <item>Div 4-A</item>
+        <item>Div 4-B</item>
+        <item>Div 4-C</item>
+        <item>Div 4-D</item>
+    </string-array>
+
 </resources>
