--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name" translatable="false">Student Hub</string>
+    <string name="invalid_name">Please Enter Valid Name</string>
+    <string name="invalid_StudentID">Please enter a valid 8 digit student ID</string>
+    <string name="invalid_email">Please enter a valid Email address</string>
+    <string name="invalid_pasword">Please enter a six digit password</string>
 
     <array name="modules">
         <item>Select Module</item>
