Sign-up process with selected modules complete (Note bug if you don't fill in fields it crashes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,31 +37,24 @@
     </string-array>
 
     <string-array name="items_div_class_1">
-        <item>Engineering</item>
-        <item>Bsc</item>
-        <item>Div 1-C</item>
-        <item>Div 1-D</item>
+        <item>Integrated Engineering</item>
+        <item>No further modules available</item>
+
     </string-array>
 
     <string-array name="items_div_class_2">
-        <item>Div 2-A</item>
-        <item>Div 2-B</item>
-        <item>Div 2-C</item>
-        <item>Div 2-D</item>
+        <item>Integrated Engineering</item>
+        <item>No further modules available</item>
     </string-array>
 
     <string-array name="items_div_class_3">
-        <item>Div 3-A</item>
-        <item>Div 3-B</item>
-        <item>Div 3-C</item>
-        <item>Div 3-D</item>
+        <item>Computer Engineering</item>
+        <item>No further modules available</item>
     </string-array>
 
     <string-array name="items_div_class_4">
-        <item>Div 4-A</item>
-        <item>Div 4-B</item>
-        <item>Div 4-C</item>
-        <item>Div 4-D</item>
+        <item>Computer Engineering</item>
+        <item>No further modules available</item>
     </string-array>
 
 </resources>
